--- a/source/stylesheets/base/_layout.scss
+++ b/source/stylesheets/base/_layout.scss
@@ -17,6 +17,19 @@ body {
 body {
   background: $white;
   margin: 0;
+
+  overflow-x: hidden;
+  position: relative;
+  right: 0;
+  transition: right 300ms ease-in-out;
+
+  @include media($menu-desktop) {
+    transition: none;
+  }
+
+  &.menu-open {
+    right: 230px;
+  }
 }
 
 section {
