Fix all kinds of stuff

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -12,9 +12,9 @@ description: Neem contact met ons op
 <section class="contact-form">
   <div class="row">
     <article>
-      <h2>Neem contact op...</h2>
+      <h2>Neem contact op</h2>
 
-      <form class="form-contact" accept-charset="UTF-8" action="post-url" method="POST">
+      <form class="form-contact" accept-charset="UTF-8" action="https://formspree.io/folkingebrew@gmail.com" method="POST">
         <input type="hidden" name="utf8" value="✓">
         <input type="hidden" name="form" value="Contact">
         <div class="form-name">
@@ -24,10 +24,10 @@ description: Neem contact met ons op
           <input type="email" name="email" placeholder="E-mail" required>
         </div>
         <div class="form-text">
-          <textarea rows="6" name="message" placeholder="Je bericht"></textarea>
+          <textarea rows="6" name="message" placeholder="Bericht"></textarea>
         </div>
         <div class="form-actions">
-          <button type="submit">Verzenden</button>
+          <button type="submit" class="button big">Verzenden</button>
         </div>
       </form>
     </article>
