--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,6 +1,7 @@
 // Typography
 $base-font-family: 'Roboto', sans-serif;
-$heading-font-family: 'Oswald', sans-serif;
+$heading-font-family: 'Wire One', sans-serif;
+$navigation-font-family: 'Poiret One', sans-serif;
 
 // Line height
 $base-line-height: 1.5;
@@ -16,7 +17,9 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
+$very-dark-grayish-red: #514545;
 $orange: #cd4f1c;
+$soft-orange: #e38e4c;
 $blue: #1565c0;
 $dark-gray: #333;
 $medium-gray: #999;
