--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -129,6 +129,7 @@
 
   li {
     font-size: $base-font-size * 1.2;
+    font-weight: 700;
     list-style: none;
     padding: 0.4em 0;
 
@@ -149,7 +150,7 @@
 
   a {
     color: $medium-gray;
-    font-family: $heading-font-family;
+    font-family: $navigation-font-family;
     text-decoration: none;
     text-transform: uppercase;
 
