--- a/source/stylesheets/_info.scss
+++ b/source/stylesheets/_info.scss
@@ -2,7 +2,7 @@ body.info {
   .hero {
     background-attachment: scroll;
     background-color: $blue;
-    background-image: url("../images/hero-sub.png");
+    background-image: url("../images/hero-home.png");
     background-position: center;
   }
 }
