--- a/source/stylesheets/base/_buttons.scss
+++ b/source/stylesheets/base/_buttons.scss
@@ -7,10 +7,10 @@ $_button-background-color-hover: shade($action-color, 20%);
   background-color: $_button-background-color;
   border: 0;
   border-radius: $base-border-radius;
-  color: contrast-switch($_button-background-color);
+  color: $white;
   cursor: pointer;
   display: inline-block;
-  font-family: $base-font-family;
+  font-family: $navigation-font-family;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   font-weight: 600;
@@ -18,6 +18,7 @@ $_button-background-color-hover: shade($action-color, 20%);
   padding: $small-spacing $base-spacing;
   text-align: center;
   text-decoration: none;
+  text-transform: uppercase;
   transition: background-color $base-duration $base-timing;
   user-select: none;
   vertical-align: middle;
@@ -48,7 +49,7 @@ $_button-background-color-hover: shade($action-color, 20%);
   }
 
   &.big {
-    font-family: $heading-font-family;
+    font-family: $navigation-font-family;
     font-size: 1.3em;
     text-transform: uppercase;
   }
