--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -11,7 +11,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $heading-font-family;
+  font-family: $base-font-family;
   font-size: modular-scale(1);
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
@@ -19,12 +19,13 @@ h6 {
 }
 
 h1 {
+  font-family: $heading-font-family;
   font-size: $base-font-size * 4;
   margin: 0;
 }
 
 h2 {
-  color: $deep-purple;
+  color: $very-dark-grayish-red;
   font-size: $base-font-size * 3;
 }
 
