Fix typography and button focus

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -5,7 +5,11 @@ description: Neem contact met ons op
 
 <section class="hero">
   <div class="row">
-    <h1>Contact</h1>
+    <h1>
+      <span>
+        Contact
+      </span>
+    </h1>
   </div>
 </section>
 
