--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -5,7 +5,11 @@ description: Waar is het festival? Hoe laat begint het?
 
 <section class="hero">
   <div class="row">
-    <h1>Info</h1>
+    <h1>
+      <span>
+        Informatie
+      </span>
+    </h1>
   </div>
 </section>
 
