--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -5,7 +5,11 @@ description: Check hier de beer, music & food line-ups
 
 <section class="hero">
   <div class="row">
-    <h1>Line up</h1>
+    <h1>
+      <span>
+        Line up
+      </span>
+    </h1>
   </div>
 </section>
 
