--- a/source/stylesheets/_line-up.scss
+++ b/source/stylesheets/_line-up.scss
@@ -1,7 +1,7 @@
 body.line-up {
   .hero {
     background-attachment: scroll;
-    background-color: $blue;
+    background-color: $light-blue;
     background-image: url("../images/hero-home.png");
     background-position: center;
     margin-bottom: 2em;
