--- a/source/stylesheets/_contact.scss
+++ b/source/stylesheets/_contact.scss
@@ -1,7 +1,7 @@
 body.contact {
   .hero {
     background-attachment: scroll;
-    background-color: $blue;
+    background-color: $light-blue;
     background-image: url("../images/hero-home.png");
     background-position: center;
   }
