--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,12 +6,11 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
 <section class="hero">
   <div class="row">
     <%= image_tag("logo-hop-into-the-grain-big.png") %>
-    <!-- <h2>
+    <h2>
       <span>May 26, 2018</span>
       <span>EM2 "the barn"</span>
       <span>Groningen</span>
     </h2>
-    -->
     <a class="button big orange">Tickets &raquo;</a>
   </div>
 </section>
@@ -36,7 +35,7 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     </h2>
 
     <p>
-      Sample a wide variety of craft beer, all while enjoying listening to live music.
+      Sample a wide variety of great Dutch craft beer, all while enjoying listening to live music.
     </p>
 
     <div class="line-up-wrapper">
