--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,5 +1,10 @@
 <footer>
   <div class="row">
-    <%= image_tag("logo-just-in-beer.png") %>
+    <p>
+      Copyright © 2018 Just in Beer & Hop! into the Grain Festival | Alle rechten voorbehouden.
+    </p>
+    <p>
+      <%= image_tag "logo-just-in-beer.png", title: "Just in Beer", alt: "Just in Beer" %>
+    </p>
   </div>
 </footer>
