--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -35,29 +35,32 @@ description: Check hier de beer, music & food line-ups
   <div class="row">
     <div class="line-up-wrapper" id="line-up-content">
 
-      <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/de-moersleutel.png") %>
-      </div>
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/the-lay.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/jopen.png") %>
+        <%= image_tag("line-up/de-moersleutel.png") %>
       </div>
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/merrick-plays-rammstein.png") %>
+        <%= image_tag("line-up/model-dispose.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/het-uiltje.png") %>
-      </div>
-      <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/ginger-likes.png") %>
+        <%= image_tag("line-up/jopen.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/frontaal.png") %>
       </div>
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/rum-and-skunk.png") %>
+      </div>
+      <div class="line-up-item" data-cat="beer">
+        <%= image_tag("line-up/het-uiltje.png") %>
+      </div>
+      <div class="line-up-item" data-cat="band">
+        <%= image_tag("line-up/rammerick.png") %>
+      </div>
+      <div class="line-up-item" data-cat="band">
+        <%= image_tag("line-up/ginger-likes.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/oproer.png") %>
@@ -67,9 +70,6 @@ description: Check hier de beer, music & food line-ups
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/de-kromme-haring.png") %>
-      </div>
-      <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/model-dispose.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/rockin-ludina.png") %>
