Add open source link

--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -7,4 +7,7 @@
       <%= image_tag "logo-just-in-beer.png", title: "Just in Beer", alt: "Just in Beer" %>
     </p>
   </div>
+  <p class="open-source">
+    <a href="https://github.com/RonaldDijkstra/hop-into-the-grain/" target="_blank">Open Source</a>
+  </p>
 </footer>
