--- a/source/stylesheets/_footer.scss
+++ b/source/stylesheets/_footer.scss
@@ -7,5 +7,18 @@ footer {
 
   p {
     font-size: $base-font-size * 1.2;
+
+    &.open-source {
+      font-family: $base-font-family;
+      font-size: $base-font-size * 0.8;
+
+      a {
+        color: #d1b28b;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
   }
 }
