Add Google Analytics

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,6 +15,7 @@
     <meta name="robots" content="<%= robots %>">
     <%= partial "favicon" -%>
     <%= stylesheet_link_tag "main" %>
+    <%= partial "analytics" %>
   </head>
   <body class="<%= page_classes %>">
     <div class="main" role="main">
