Add buy ticket section

--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,7 +1,12 @@
 <footer>
   <div class="row">
     <p>
-      Copyright © 2018 Just in Beer & Hop! into the Grain Festival | Alle rechten voorbehouden.
+      <span>
+        Copyright © 2018 Just in Beer & Hop! into the Grain Festival
+      </span>
+      <span>
+        Alle rechten voorbehouden.
+      </span>
     </p>
     <p>
       <%= image_tag "logo-just-in-beer.png", title: "Just in Beer", alt: "Just in Beer" %>
