--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -7,7 +7,7 @@ description: Check hier de beer, music & food line-ups
   <div class="row">
     <h1>
       <span>
-        Line up
+        Line-up
       </span>
     </h1>
   </div>
@@ -92,3 +92,5 @@ description: Check hier de beer, music & food line-ups
     </div>
   </div>
 </section>
+
+<%= partial "ticket" %>
