--- a/source/stylesheets/_home.scss
+++ b/source/stylesheets/_home.scss
@@ -24,15 +24,25 @@ body.index {
       color: $orange;
       font-family: $navigation-font-family;
       font-size: $base-font-size * 1.4;
+      line-height: 1.8em;
       margin-bottom: 1.5em;
 
-      span {
-        border-left: 2px solid $orange;
-        padding: 0 10px;
+      @include media ($medium-up) {
+        line-height: $base-line-height;
+      }
 
-        &:first-child {
-          border-left: 0;
-          padding-left: 0;
+      span {
+        display: block;
+
+        @include media ($medium-up) {
+          border-left: 2px solid $orange;
+          display: inline;
+          padding: 0 0.6em;
+
+          &:first-child {
+            border-left: 0;
+            padding-left: 0;
+          }
         }
       }
     }
