--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -16,76 +16,11 @@ description: Waar is het festival? Hoe laat begint het?
 <section class="content">
   <div class="row">
     <article>
-      <h2>
-        Praktisch
-      </h2>
-      <h3>
-        Waar is het Festival?
-      </h3>
       <p>
-        Het Festival vindt plaats op het M2 terrein in Groningen. We adviseren iedereen om met openbaar vervoer te komen. <a href="#">Routebeschrijving</a>
+        Welkom op de website van Hop! Into the Grain! Dat je hier bent komen kijken betekend dat je geïnteresseerd bent in dit geweldige lentefestival. Dat is natuurlijk volkomen terecht. Naast dat er <a href="/line-up/">diverse goede Nederlandse brouwerijen</a> (en een ciderman) zullen staan hebben we ook <a href="/line-up/">een muziekprogramma</a> met diverse talentvolle acts van uiteenlopende genres. Natuurlijk kan dit alles niet zonder wat good food, dus hebben we ook wat foodtrucks uitgenodigd.
       </p>
-      <h3>
-        Hoe laat is het Festival?
-      </h3>
       <p>
-        Het Festival duurt van 12:00 uur tot 02:00 uur. Taps sluiten om 01:45 uur.
-      </p>
-      <h3>
-        Minimumleeftijd
-      </h3>
-      <p>
-        Belangrijk: onder 18 jaar: geen alcohol. Breng je id mee.
-      </p>
-      <h3>
-        Wat kost een muntje?
-      </h3>
-      <p>
-        [geen idee]
-      </p>
-      <h3>
-        Kun je pinnen?
-      </h3>
-      <p>
-        [geen idee]
-      </p>
-      <h3>
-        Wat krijg je voor een ticket?
-      </h3>
-      <p>
-        Bij een ticket krijg je een 20 cl proefglas.
-      </p>
-
-      <h2>
-        Bier
-      </h2>
-      <h3>
-        Welke bieren worden geschonken?
-      </h3>
-      <p>
-        [geen idee]
-      </p>
-      <h3>
-        Wat is het formaat van een taster?
-      </h3>
-      <p>
-        [geen idee]
-      </p>
-      <h3>
-        Eigen bier en eten meenemen
-      </h3>
-      <p>
-        Uiteraard delen we zelf ook graag een bijzonder bier met onze beer geek vrienden, dus we gaan geen regels bedenken. We vragen je wel een beetje respect voor de organisatie van Hop! into the Grain! Festival. We vinden het daarom ongepast om grote hoeveelheden meegebrachte flessen bier te drinken, maar een fles hier en daar moet kunnen... Dank voor je begrip 🙂
-      </p>
-
-      <h2>
-        Muziek
-      </h2>
-      <h3>
-        Welke bands treden op?
-      </h3>
-      <p>
-        [geen idee]
+        We zullen nog veel doen aan de verdere inrichting van vermaak en masterclasses/proeverijen aankondigen, waarvan apart tickets kunnen worden besteld. We starten al vroeg in de middag om 12:00 uur en sluiten pas af om 01:30 uur in de nacht! Een hele dag plezier voor €14,95, inclusief festivalglas.
       </p>
     </article>
   </div>
