Add huisregels, simplify scss

--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -13,6 +13,11 @@
     </p>
   </div>
   <p class="open-source">
-    <a href="https://github.com/RonaldDijkstra/hop-into-the-grain/" target="_blank">Open Source</a>
+    <span>
+      <%= nav_link "Huisregels", "/huisregels/" %>
+    </span>
+    <span>
+      <a href="https://github.com/RonaldDijkstra/hop-into-the-grain/" target="_blank">Open Source</a>
+    </span>
   </p>
 </footer>
