--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -22,6 +22,12 @@ description: Waar is het festival? Hoe laat begint het?
       <p>
         We zullen nog veel doen aan de verdere inrichting van vermaak en masterclasses/proeverijen aankondigen, waarvan apart tickets kunnen worden besteld. We starten al vroeg in de middag om 12:00 uur en sluiten pas af om 01:30 uur in de nacht! Een hele dag plezier voor €14,95, inclusief festivalglas.
       </p>
+      <h2>
+        Huisregels
+      </h2>
+      <p>
+        Lees hier <a href="/huisregels/">de huisregels</a>.
+      </p>
     </article>
   </div>
 </section>
