--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -18,6 +18,7 @@ $base-z-index: 0;
 
 // Colors
 $very-dark-grayish-red: #514545;
+$light-orange: #d1b28b;
 $orange: #cd4f1c;
 $soft-orange: #e38e4c;
 $blue: #1565c0;
