--- a/source/stylesheets/components/_hero.scss
+++ b/source/stylesheets/components/_hero.scss
@@ -1,4 +1,8 @@
 .hero {
+  background-attachment: scroll;
+  background-color: $light-blue;
+  background-image: url("../images/hero-home.png");
+  background-position: center;
   background-size: cover;
   padding: 3em 0;
   position: relative;
