Add Paylogic link

--- a/source/_ticket.html.erb
+++ b/source/_ticket.html.erb
@@ -1,5 +1,5 @@
 <section class="ticket">
   <div class="row">
-    <a class="button big orange" href="#">Buy tickets &raquo;</a>
+    <a class="button big orange" href="	https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">Buy tickets &raquo;</a>
   </div>
 </section>
