--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -23,7 +23,7 @@
           <%= nav_link "Contact", "/contact/", class: "nav-item" %>
         </li>
         <li>
-          <a class="button orange" href="#">Tickets &raquo;</a>
+          <a class="button orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">Tickets &raquo;</a>
         </li>
       </ul>
     </nav>
