--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
       <span>EM2 "the barn"</span>
       <span>Groningen</span>
     </h2>
-    <a class="button big orange">Tickets &raquo;</a>
+    <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">Tickets &raquo;</a>
   </div>
 </section>
 
