Translate to Dutch

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,11 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
 <section class="counter">
   <div class="row">
 
-    <h2>Countdown</h2>
+    <h2>Aftellen...</h2>
+
+    <p>
+      Hoe lang nog tot Hop! into the Grain Festival begint?
+    </p>
 
     <div class="counter-wrapper" id="timer">
 
@@ -35,7 +39,7 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     </h2>
 
     <p>
-      Sample a wide variety of great Dutch craft beer, all while enjoying listening to live music.
+      Proef een breed scala aan geweldig Nederlands craft beer, terwijl je geniet van het luisteren naar livemuziek.
     </p>
 
     <div class="line-up-wrapper">
@@ -53,7 +57,7 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
       </div>
     </div>
 
-    <a href="/line-up/" class="button big orange">View full line-up</a>
+    <a href="/line-up/" class="button big orange">Bekijk volledige line-up</a>
 
   </div>
 </section>
