Add location Google Maps

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,5 +25,6 @@
     </div>
     <%= javascript_include_tag "site" %>
     <%= javascript_include_tag "date-countdown.js" if current_page.url == "/" %>
+    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDomyV2iFDDiyyW1QCmQBWcaGrgycgQAf0&v=3.exp'></script>
   </body>
 </html>
