--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,5 +26,7 @@
     <%= javascript_include_tag "site" %>
     <%= javascript_include_tag "date-countdown.js" if current_page.url == "/" %>
     <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDomyV2iFDDiyyW1QCmQBWcaGrgycgQAf0&v=3.exp'></script>
+
+    <%= partial "schema" %>
   </body>
 </html>
