--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Hop into the Grain! - Craft Beer & Music Festival - MAY 26th, 2018 - Groningen
-description: Hop into the Grain! op het Craft Beer & Music Festival
+description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powered by Just in Beer. Check de line-up en informatie of koop direct tickets!
 ---
 
 <section class="hero">
