--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 ---
-title: Hop into the Grain! - Craft Beer & Music Festival - MAY 26th, 2018 - Groningen
-description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powered by Just in Beer. Check de line-up en informatie of koop direct tickets!
+title: Hop! into the Grain | Craft Beer & Music Festival | 26 mei 2018 - Groningen
+description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powered by Just in Beer. Check de line-up, informatie en koop direct tickets!
 ---
 
 <section class="hero">
@@ -43,16 +43,16 @@ description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powe
     </p>
 
     <div class="line-up-wrapper">
-      <div class="line-up-block" href="#">
+      <div class="line-up-block">
         <%= image_tag("line-up/het-uiltje.png") %>
       </div>
-      <div class="line-up-block" href="#">
+      <div class="line-up-block">
         <%= image_tag("line-up/de-moersleutel.png") %>
       </div>
-      <div class="line-up-block" href="#">
+      <div class="line-up-block">
         <%= image_tag("line-up/jopen.png") %>
       </div>
-      <div class="line-up-block" href="#">
+      <div class="line-up-block">
         <%= image_tag("line-up/frontaal.png") %>
       </div>
     </div>
