Add magnetic spacemen

--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -36,16 +36,23 @@ description: Check hier de beer, music & food line-ups
     <div class="line-up-wrapper" id="line-up-content">
 
       <div class="line-up-item" data-cat="band">
+        <%= image_tag("line-up/magnetic-spacemen.png") %>
+      </div>
+      <div class="line-up-item" data-cat="beer">
+        <%= image_tag("line-up/het-uiltje.png") %>
+      </div>
+      <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/the-lay.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/de-moersleutel.png") %>
       </div>
-      <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/model-dispose.png") %>
-      </div>
+
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/jopen.png") %>
+      </div>
+      <div class="line-up-item" data-cat="band">
+        <%= image_tag("line-up/model-dispose.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/frontaal.png") %>
@@ -53,26 +60,26 @@ description: Check hier de beer, music & food line-ups
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/rum-and-skunk.png") %>
       </div>
-      <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/het-uiltje.png") %>
-      </div>
+
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/rammerick.png") %>
-      </div>
-      <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/ginger-likes.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/oproer.png") %>
       </div>
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/meadowlake.png") %>
+        <%= image_tag("line-up/ginger-likes.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/de-kromme-haring.png") %>
       </div>
+
+
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/rockin-ludina.png") %>
+      </div>
+      <div class="line-up-item" data-cat="band">
+        <%= image_tag("line-up/meadowlake.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/martinus.png") %>
@@ -80,6 +87,7 @@ description: Check hier de beer, music & food line-ups
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/bax.png") %>
       </div>
+
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/pivo.png") %>
       </div>
