Update The Lay and Model Depose

--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -52,7 +52,7 @@ description: Check hier de beer, music & food line-ups
         <%= image_tag("line-up/jopen.png") %>
       </div>
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/model-dispose.png") %>
+        <%= image_tag("line-up/model-depose.png") %>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/frontaal.png") %>
@@ -73,7 +73,6 @@ description: Check hier de beer, music & food line-ups
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/de-kromme-haring.png") %>
       </div>
-
 
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/rockin-ludina.png") %>
