Update all other band images

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,11 +7,13 @@ description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powe
   <div class="row">
     <%= image_tag("logo-hop-into-the-grain-big.png") %>
     <h2>
-      <span>May 26, 2018</span>
+      <span>26 mei 2018, 12:00 - 01:30</span>
       <span>EM2 "the barn"</span>
       <span>Groningen</span>
     </h2>
-    <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">Tickets &raquo;</a>
+    <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">
+      Tickets &raquo;
+    </a>
   </div>
 </section>
 
@@ -39,7 +41,7 @@ description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powe
     </h2>
 
     <p>
-      Proef een breed scala aan geweldig Nederlands craft beer, terwijl je geniet van het luisteren naar livemuziek.
+      Proef een breed scala aan geweldig Nederlands craft beer en geniet van het luisteren naar livemuziek.
     </p>
 
     <div class="line-up-wrapper">
