--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Line-up
-description: Check hier de beer, music & food line-ups
+description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowlake en De Moersleutel. Bekijk de rest van de line-up.
 ---
 
 <section class="hero">
@@ -18,10 +18,10 @@ description: Check hier de beer, music & food line-ups
     <div class="line-up-nav-wrapper" id="line-up-sort">
       <ul>
         <li>
-          <a class="active" href="#" id="all">ALL</a>
+          <a class="active" href="#" id="all">ALLES</a>
         </li>
         <li>
-          <a href="#" data-cat="beer">BEER</a>
+          <a href="#" data-cat="beer">BIER</a>
         </li>
         <li>
           <a href="#" data-cat="band">BANDS</a>
