--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,17 +1,34 @@
 <footer>
   <div class="row">
-    <p>
-      <span>
-        Copyright © 2018 Just in Beer & Hop! into the Grain Festival
-      </span>
-      <span>
-        Alle rechten voorbehouden.
-      </span>
-    </p>
-    <p>
-      <%= image_tag "logo-just-in-beer.png", title: "Just in Beer", alt: "Just in Beer" %>
-    </p>
+    <div class="footer-logos">
+      <h4>
+          Powered by:
+      </h4>
+      <p>
+        <a href="https://www.facebook.com/Just.in.Beer.Groningen/" target="_blank">
+          <%= image_tag "logo-just-in-beer.png", title: "Just in Beer", alt: "Just in Beer" %>
+        </a>
+      </p>
+      <div class="footer-logo">
+        <a href="https://www.bierenco.nl" target="_blank">
+          <%= image_tag "logo-bierenco.png", title: "Bier & Co", alt: "Bier & Co" %>
+        </a>
+      </div>
+      <div class="footer-logo">
+        <a href="http://em2groningen.nl/" target="_blank">
+          <%= image_tag "logo-em2.png", title: "EM2 Groningen", alt: "EM2 Groningen" %>
+        </a>
+      </div>
+    </div>
   </div>
+  <p>
+    <span>
+      Copyright © 2018 Just in Beer & Hop! into the Grain Festival
+    </span>
+    <span>
+      Alle rechten voorbehouden.
+    </span>
+  </p>
   <p class="open-source">
     <span>
       <%= nav_link "Huisregels", "/huisregels/" %>
