--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -163,5 +163,20 @@
         color: $orange;
       }
     }
+
+    &.icon-facebook {
+      background: $medium-gray;
+      border-radius: $base-border-radius;
+      color: $white;
+      display: inline-block;
+      padding: 0.2em;
+      transition: background-color 150ms ease;
+
+      &.active,
+      &:active,
+      &:hover, {
+        background: $orange;
+      }
+    }
   }
 }
