--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,8 +8,7 @@ description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powe
     <%= image_tag("logo-hop-into-the-grain-big.png") %>
     <h2>
       <span>26 mei 2018, 12:00 - 01:30</span>
-      <span>EM2 "the barn"</span>
-      <span>Groningen</span>
+      <span>EM2 "the barn", Groningen</span>
     </h2>
     <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">
       Tickets &raquo;
