--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,6 +16,7 @@
     <div class="main" role="main">
       <%= partial "header" %>
       <%= yield %>
+      <%= partial "share" %>
       <%= partial "footer" %>
     </div>
     <%= javascript_include_tag "site" %>
