--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -159,18 +159,15 @@
     &.nav-item {
       &.active,
       &:active,
-      &:hover, {
+      &:hover {
         color: $orange;
       }
     }
 
     &.icon-facebook {
       background: $medium-gray;
-      border-radius: $base-border-radius;
       color: $white;
       display: inline-block;
-      padding: 0.2em;
-      transition: background-color 150ms ease;
 
       &.active,
       &:active,
