--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -16,7 +16,14 @@ description: Neem contact met ons op
 <section class="contact-form">
   <div class="row">
     <article>
-      <h2>Neem contact op</h2>
+
+      <h2>
+        Neem contact op
+      </h2>
+
+      <p>
+        Heb je een vraag of opmerking? Zie je iets dat niet goed is aan deze website of mis je iets? Neem contact met Just in Beer op via onderstaande formulier.
+      </p>
 
       <form class="form-contact" accept-charset="UTF-8" action="https://formspree.io/folkingebrew@gmail.com" method="POST">
         <input type="hidden" name="utf8" value="✓">
