--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -16,17 +16,20 @@ description: Waar is het festival? Hoe laat begint het?
 <section class="content">
   <div class="row">
     <article>
+      <h2>
+        Welkom op Hop! into the Grain Craft Beer & Music Festival!
+      </h2>
       <p>
-        <strong>Welkom op de website van Hop! into the Grain Craft Beer & Music Festival!</strong>
+        Dat je hier bent komen kijken betekent dat je geïnteresseerd bent in dit geweldige lentefestival. Dat is natuurlijk volkomen terecht! 🙂
       </p>
       <p>
-        Dat je hier bent komen kijken betekend dat je geïnteresseerd bent in dit geweldige lentefestival. Dat is natuurlijk volkomen terecht! 🙂 Naast dat er <a href="/line-up/">diverse goede Nederlandse brouwerijen</a> (en een ciderman!) zullen staan hebben we ook <a href="/line-up/">een muziekprogramma</a> met diverse talentvolle acts van uiteenlopende genres. Natuurlijk kan dit alles niet zonder wat good food, dus hebben we ook wat foodtrucks uitgenodigd.
+        Naast dat er <a href="/line-up/">uitstekende regionale en nationale brouwerijen</a> (en een ciderman!) zullen staan hebben we ook <a href="/line-up/">een muziekprogramma</a> met diverse talentvolle acts van uiteenlopende genres. Natuurlijk kan dit alles niet zonder wat <em>good food</em>, dus hebben we ook wat foodtrucks uitgenodigd.
       </p>
       <p>
-        Het festival vindt plaats bij EM2 "the Barn" (Energieweg 10) in Groningen. We starten 26 mei al vroeg in de middag om 12:00 uur en sluiten pas af om 01:30 uur in de nacht! Een hele dag plezier voor €14,95, inclusief 20 cl festivalglas. Een muntje kost €2,50.
+        Het bier- en muziekfestival, georganiseerd door Just in Beer, vindt plaats bij EM2 "the Barn" (<a href="http://em2groningen.nl/route-parkeren/" target="_blank">routebeschrijving</a>) in Groningen. We starten 26 mei al vroeg in de middag om 12:00 uur en sluiten pas af om 01:30 uur in de nacht! Een hele dag plezier voor €14,95, inclusief 20 cl speciaal festivalglas. Een muntje kost €2,50 en er kan gepind worden.
       </p>
       <p>
-        We zullen nog veel doen aan de verdere inrichting van vermaak en masterclasses/proeverijen aankondigen, waarvan apart tickets kunnen worden besteld. <a href="https://www.facebook.com/events/191110228287711/" target="_blank">Volg ons op Facebook</a> voor updates en <a href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">koop hier</a> direct je kaarten.
+        We zullen nog veel doen aan de verdere inrichting van vermaak en masterclasses/proeverijen aankondigen, waarvan apart tickets kunnen worden besteld. <a href="https://www.facebook.com/events/191110228287711/" target="_blank">Volg ons op Facebook</a> om op de hoogte te blijven en <a href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">koop hier</a> direct je kaarten.
       </p>
       <p>
         Lees <a href="/huisregels/">hier</a> de huisregels die van toepassing zijn op het festival.
