Update line-up filtering

--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -17,14 +17,14 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
   <div class="row">
     <div class="line-up-nav-wrapper" id="line-up-sort">
       <ul>
-        <li>
-          <a class="active" href="#" id="all">ALLES</a>
+        <li class="filter">
+          <a class="active" id="all">ALLES</a>
         </li>
-        <li>
-          <a href="#" data-cat="beer">BIER</a>
+        <li class="filter">
+          <a data-cat="beer">BIER</a>
         </li>
-        <li>
-          <a href="#" data-cat="band">BANDS</a>
+        <li class="filter">
+          <a data-cat="band">BANDS</a>
         </li>
       </ul>
     </div>
