--- a/source/stylesheets/_line-up.scss
+++ b/source/stylesheets/_line-up.scss
@@ -15,6 +15,7 @@ body.line-up {
       margin: 0;
 
       a {
+        cursor: pointer;
         display: block;
         font-family: $navigation-font-family;
         font-size: $base-font-size * 1.4;
